--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,8 @@ services:
   - type: web
     name: water-footprint-app
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
-      - key: PIP_VERSION
-        value: 23.3.1
+        value: 3.11.9
