--- a/.gitignore
+++ b/.gitignore
@@ -47,17 +47,9 @@ Thumbs.db
 # Logs
 *.log
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Temporary files
+*.tmp
+*.temp
 
-# Flask
-instance/
-.webassets-cache
-
-# Model files (if too large for git)
-# *.pkl
-# *.joblib
+# Deployment files
+*.zip
